[package]
name = "md2jsx"
version = "1.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "High-performance Markdown to JSX AST transpiler for Web and Android"
authors = ["Ari Asulin"]
repository = "https://github.com/clevertree/md2jsx"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
android = ["jni"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
anyhow = "1"
thiserror = "1"
once_cell = "1"
log = "0.4"
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
jni = { version = "0.21", optional = true }
android_logger = "0.13"
regex = "1.12.2"
lazy_static = "1.5.0"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
